# BrachyPrediction_CNNmodel

./: .gitignore  README.md  datasets.dvc  launch.json  pyproject.toml  requirements.txt  textFileData.dvc
datasets/: DS1.npz  DS10.npz  DS11.npz  DS12.npz  DS13.npz  DS14.npz  DS15.npz  DS16.npz  DS17.npz  DS18.npz  DS19.npz  DS2.npz  DS20.npz  DS21.npz  DS22.npz  DS23.npz  DS24.npz  DS25.npz  DS26.npz  DS27.npz  DS28.npz  DS29.npz  DS3.npz  DS30.npz  DS31.npz  DS32.npz  DS33.npz  DS34.npz  DS35.npz  DS36.npz  DS37.npz  DS38.npz  DS39.npz  DS4.npz  DS40.npz  DS5.npz  DS6.npz  DS7.npz  DS8.npz  DS9.npz  (+1 more)
matfiles/: training_data1.mat  training_data2.mat  training_data3.mat  training_data4.mat
npz_data/: training_data1_sample1.npz  training_data1_sample10.npz  training_data1_sample11.npz  training_data1_sample2.npz  training_data1_sample3.npz  training_data1_sample4.npz  training_data1_sample5.npz  training_data1_sample6.npz  training_data1_sample7.npz  training_data1_sample8.npz  training_data1_sample9.npz  training_data2_sample1.npz  training_data2_sample10.npz  training_data2_sample2.npz  training_data2_sample3.npz  training_data2_sample4.npz  training_data2_sample5.npz  training_data2_sample6.npz  training_data2_sample7.npz  training_data2_sample8.npz  training_data2_sample9.npz  training_data3_sample1.npz  training_data3_sample10.npz  training_data3_sample2.npz  training_data3_sample3.npz  training_data3_sample4.npz  training_data3_sample5.npz  training_data3_sample6.npz  training_data3_sample7.npz  training_data3_sample8.npz  training_data3_sample9.npz  (+10 more)
(+49 files in other folders)
