[project]
name = "cnnmodel-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Marios Dallas",email = "mariosdallas2995@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "torch (>=2.6.0,<3.0.0) ; python_version >= \"3.12\" and python_version < \"4.0\"",
    "torchvision (>=0.21.0,<0.22.0) ; python_version >= \"3.12\" and python_version < \"4.0\"",
    "torchaudio (>=2.6.0,<3.0.0) ; python_version >= \"3.12\" and python_version < \"4.0\"",
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "wandb (>=0.19.9,<0.20.0)",
    "tensorboard (>=2.19.0,<3.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.11.5"
mypy = "^1.15.0"
pytest = "^8.3.5"
ipython = "^9.1.0"
jupyterlab = "^4.4.0"
pytest-cov = "^6.1.1"
notebook = "^7.4.0"

